(library
 (name croquis)
 (public_name croquis)
 (libraries core_kernel otfm vg vg.pdf)
 (private_modules Linux_libertine Vg_text))

(rule
  (target linux_libertine.ml)
  (deps (file ocamlify_font.sh) (:font LinLibertine_R.otf))
  (action (run bash ocamlify_font.sh %{font} %{target})))

(rule
  (target helvetica_bold.ml)
  (deps (file ocamlify_font.sh) (:font Helvetica-Bold.otf))
  (action (run bash ocamlify_font.sh %{font} %{target})))
